# ausschreibungsbot

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
backlog/: Product_Backlog.csv
config/: keywords_multilingual.csv  portal_master.csv
docs/: AI_First_Plan_DE.md  AI_First_Plan_EN.md
docs/Prompts/: 01_repo_bootstrap_prompt.md  02_connectors_prompt.md  03_scoring_prompt.md  04_scraper_prompt.md  05_email_parser_prompt.md
ops/: Makefile  docker-compose.yml
src/app/: config.py  db.py  logging.py  main.py  models.py
src/app/email_parser/: __init__.py  imap_client.py  parser.py
src/app/migrations/: migrate.py
src/app/scoring/: __init__.py  keywords.py  nlp.py  pipeline.py
src/app/scraper/: __init__.py  portal.py
templates/: alert_email.txt
tests/: test_email_parser.py  test_health.py  test_models.py  test_scoring_pipeline.py  test_scraper_portal.py
tests/fixtures/: email_alert_1.eml  email_alert_2_duplicate.eml  portal_search_results.html
